HW_4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: default
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: web-content
              mountPath: /usr/share/nginx/html
              readOnly: true

        - name: multitool
          image: wbitt/network-multitool:latest
          command:
            - /bin/sh
            - -c
            - sleep infinity

      volumes:
        - name: web-content
          configMap:
            name: web-content
            items:
              - key: index.html
                path: index.html
